# MiraxAi

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.codex/: current-worker-prompt.md  dispatch-state.json  heartbeat-prompt.md  worker-prompt-template.md
.codex/scripts/: cmux-bin.sh  controller-review.sh  read-worker-status.sh  signal-worker-done.sh
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.nativeTheme.test.ts  App.provider-runtime.test.ts  App.vue  main.test.ts  main.ts  styles.css  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
desktop/: tsconfig.json  vite.config.ts
desktop/src/: App.vue  styles.css
docs/: 人工提示词.md
docs/codex/: PROJECT-STATE.md
docs/design-source/: stitch-asset-sources.json
docs/product-architecture/: README.md  data-provider-sidecar-contracts.md  engineering-module-map.md  legacy-function-to-information-architecture.md  publish-automation-security-design.md  rewrite-credential-read-boundary.md  stage-3-source-inventory.md  stitch-ui-source-map.md  ui-ux-and-phase-4-handoff.md  workbench-real-capability-rollout.md  workflow-and-release-chain.md
docs/reverse-engineering/: assets-index.md  demo-video-coverage.md  demo-video-timeline.md  evidence-index.md  legacy-ui-gap-list.md  runtime-blockers.md
docs/superpowers/: PROJECT-STATE.md
(+218 files in other folders)
