[package]
name = "mirax-ai-desktop"
version = "0.1.0"
description = "Mirax AI desktop client"
authors = ["Mirax AI"]
edition = "2021"

[lib]
name = "mirax_ai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
