[package]
name = "mirax-ai-desktop"
version = "0.1.0"
description = "Mirax AI desktop client"
authors = ["Mirax AI"]
edition = "2021"

[lib]
name = "mirax_ai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

[dev-dependencies]
tempfile = "3"
